--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 sudo: false
+
 language: node_js
+
 env:
   - CXX=g++-4.8
+
 node_js:
-  - "4.1"
-services:
-  - mongodb
+  - '4'
+  - stable
+
 addons:
   apt:
     sources:
@@ -13,9 +16,15 @@ addons:
     packages:
     - g++-4.8
 
+services:
+  - mongodb
+
 before_install:
   - $CXX --version
+
 before_script:
   - npm install -g gulp
+
 script: gulp test
+
 after_script: gulp coveralls
