--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "jackblog-api-koa",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.0-rc.0",
+  "description": "jackblog API koa版",
+  "main": "server/app.js",
   "scripts": {
     "test": "gulp test",
     "start": "gulp serve",
     "pm2-start": "pm2 start process.json",
     "pm2-restart": "pm2 restart process.json"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jackhutu/jackblog-api-koa.git"
+  },
+  "keywords": [
+    "jackblog"
+  ],
+  "author": "Jack Hu",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jackhutu/jackblog-api-koa/issues"
+  },
+  "homepage": "https://github.com/jackhutu/jackblog-api-koa#readme",
   "dependencies": {
     "bluebird": "^3.1.1",
     "bunyan": "^1.5.1",
@@ -22,7 +36,7 @@
     "koa-generic-session": "^1.10.1",
     "koa-generic-session-mongo": "^0.2.4",
     "koa-json": "^1.1.1",
-    "koa-jwt": "^1.1.1",
+    "koa-jwt": "^1.1.2",
     "koa-logger": "^1.3.0",
     "koa-multer": "0.0.2",
     "koa-onerror": "^1.2.1",
@@ -36,7 +50,8 @@
     "passport-local": "^1.0.0",
     "passport-qq": "0.0.3",
     "passport-weibo": "^0.1.2",
-    "qiniu": "^6.1.9"
+    "qiniu": "^6.1.9",
+    "pm2": "^0.15.7"
   },
   "devDependencies": {
     "del": "^2.2.0",
