--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jackblog-api-koa",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "jackblog API koa版",
   "main": "server/app.js",
   "scripts": {
@@ -28,19 +28,20 @@
     "ccap": "^0.6.4",
     "co": "^4.6.0",
     "debug": "^2.2.0",
+    "ioredis": "^1.15.1",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
     "koa-compose": "^2.3.0",
     "koa-compress": "^1.0.8",
     "koa-cors": "0.0.16",
     "koa-generic-session": "^1.10.1",
-    "koa-generic-session-mongo": "^0.2.4",
     "koa-json": "^1.1.1",
     "koa-jwt": "^1.1.2",
     "koa-logger": "^1.3.0",
     "koa-multer": "0.0.2",
     "koa-onerror": "^1.2.1",
     "koa-passport": "^1.2.0",
+    "koa-redis": "^2.0.1",
     "koa-response-time": "^1.0.2",
     "koa-router": "^5.3.0",
     "lodash": "^4.0.0",
@@ -55,7 +56,7 @@
   },
   "devDependencies": {
     "del": "^2.2.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-coveralls": "^0.1.4",
     "gulp-env": "^0.4.0",
     "gulp-istanbul": "^0.10.3",
