--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jackblog-api-koa",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "jackblog API koa版",
   "main": "server/app.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "co": "^4.6.0",
     "debug": "^2.2.0",
     "ioredis": "^1.15.1",
+    "ismobilejs": "^0.4.0",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.0.1",
     "koa-compose": "^2.4.0",
@@ -44,9 +45,9 @@
     "koa-redis": "^2.0.1",
     "koa-response-time": "^1.0.2",
     "koa-router": "^5.3.0",
-    "lodash": "^4.7.0",
+    "lodash": "^4.8.2",
     "markdown-it": "^6.0.1",
-    "mongoose": "^4.4.10",
+    "mongoose": "^4.4.11",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-qq": "0.0.3",
