--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "gulp test",
     "start": "gulp serve",
-    "pm2-start": "pm2 start process.json",
-    "pm2-restart": "pm2 restart process.json"
+    "pm2-start": "pm2 start --no-daemon process.json"
   },
   "repository": {
     "type": "git",
@@ -50,7 +49,6 @@
     "passport-local": "^1.0.0",
     "passport-qq": "0.0.3",
     "passport-weibo": "^0.1.2",
-    "pm2": "^1.1.3",
     "qiniu": "^6.1.11"
   },
   "devDependencies": {
