--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "jackblog-api-koa",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "jackblog API koa版",
   "main": "server/app.js",
   "scripts": {
-    "test": "gulp test",
     "start": "gulp serve",
-    "pm2-start": "pm2 start --no-daemon process.json"
+    "pm2-start": "pm2 start --no-daemon process.json",
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
